--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <table>
+  <table cellspacing=20>
     <tr>
-      <td>><img src="C:\Users\tanma\Pictures\Picture33.png" alt="yes u dont see an image."></img></td>
+      <td><img src="C:\My Files\Web Development\Projects\HTML - Personal site\images\tanmay.png" width="200" height="200" alt="yes u dont see an image."></img></td>
       <td>
         <h1>Tanmay kank</h1>
         <p>
@@ -29,35 +29,62 @@
   </hr>
   <h3>Eduaction</h3>
   <ul>
-    <li>Ambe Vidyalaya</li>
-    <li>Babaria institute of Technology</li>
-    <li>Jai Ambe Vidyalaya</li>
-    <li>Ambe Vidyalaya</li>
+    <li><strong>Babaria institute of Technology </strong><br>
+     Bachelor’s in Computer Engineering
+    <p>BABARIA INSTITUTE OF TECHNOLOGY (BITS Edu Campus) is a college affiliated with GUJARAT TECHNOLOGICAL UNIVERSITY in the Gujarat state of India.<br>
+ I have graduated recently with my current:<br>
+ SPI: 9.0 CPI: 8.75 CGPA: 8.75<br>
+My Academic exposure:<br>
+First semester: Stood 7th in my department SPI-wise by securing 8.97spi. Second year: Ranked 9th in my department CPI-wise by securing 9.33spi.<br>
+Last year: Scoring a decent grade SPI-wise of 9.20spi.<br>
+Some courses of my interest undertaken in under graduation are Python programming, OOBJ using Java, Software engineering, Web Technology, and Data Structure.</p>
+    </li>
+    <li><strong>Lakehead University</strong><br>
+    Master’s in Computer Science
+    <p>
+      I am presently pursing my post-graduation and my current GPA are 84.143.<br>
+     Courses that are so far undertaken by me are Big data, Pattern Recognition, Natural Language Processing, and Computer Security.<br>
+
+    </p>
+    </li>
   </ul>
-  <h3><a href="hobbies.html">Hobbies</a></h3>
-  <ol type="i">
-    <li>chess</li>
-    <li>tt</li>
-    <li>movies</li>
-  </ol>
-  <h3><a href="contactus.html">Contact us</a></h3>
+<hr size="3">
+
 
   <table>
     <thead>
       <tr>
         <th>Date</th>
-        <th>Experience</th>
+        <th>Project</th>
       </tr>
     </thead>
 
     <tbody>
       <tr>
-        <td>2019</td>
-        <td>Computer engineer</td>
+        <td>2018-2019</td>
+        <td><strong>Bachelor's Project</strong> <br>
+        ‘Transmute Factory’ an innovative Website
+   A document converter web application in MVC.net. It is basically a conversion tool for excel to ppt, but unlike conventional system. It has two modules which completely converts our excel file to ppt:
+   <ol>
+     <li>Convert excel sheet column name to ppt with detection.
+     </li>
+     <li>  Convert the numeric data to the analytical formats like bar graphs.</li>
+   </ol>
+        </td>
       </tr>
       <tr>
-        <td>2020</td>
-        <td>Masters in Computer sci</td>
+        <td>Master's First Project 2019</td>
+        <td>
+          Analysis of Diabetic Dataset
+          <ul>
+            <li>Testing the hypothesis whether HBa1c is indicative of reduced re-admission to the hospitals or it the results obtained in the research done is just by pure chance.</li>
+            <li>We preprocessed the data and did feature selection using Filter and wrapper approach</li>
+            <li>Models Implemented were Random Forests, KNN and SVM</li>
+          </ul>
+
+
+
+        </td>
       </tr>
     </tbody>
     <tfoot>
@@ -65,26 +92,10 @@
     </tfoot>
   </table>
 
-
+<hr size="3">
 <h3>skills</h3>
 <table>
   <tr>
-    <td>Web development </td>
-    <td>💛💛💛💛💛</td>
-    <td>Ios development </td>
-    <td>💛💛💛</td>
-  </tr>
-  <tr>
-    <td>Android development</td>
-    <td>💛💛💛💛💛</td>
-    <td>Machine learning</td>
-    <td> 💛💛💛💛</td>
-  </tr>
-</table>
-
-<h3>Nested table</h3>
-<table>
-  <tr>
     <td>
       <table>
         <tr>
@@ -92,15 +103,15 @@
           <td>💛💛💛💛💛</td>
         </tr>
         <tr>
-          <td>Ios development </td>
+          <td>Python</td>
           <td>💛💛💛</td>
         </tr>
         <tr>
-          <td>Android development</td>
+          <td>Java</td>
           <td>💛💛💛💛💛</td>
         </tr>
         <tr>
-          <td>Machine learning</td>
+          <td>SQL</td>
           <td> 💛💛💛💛</td>
         </tr>
       </table>
@@ -108,15 +119,15 @@
     <td>
       <table>
         <tr>
-          <td>Web development </td>
+          <td>C Programming</td>
           <td>💛💛💛💛💛</td>
         </tr>
         <tr>
-          <td>Ios development </td>
+          <td>Android development </td>
           <td>💛💛💛</td>
         </tr>
         <tr>
-          <td>Android development</td>
+          <td>Spring Boot</td>
           <td>💛💛💛💛💛</td>
         </tr>
         <tr>
@@ -127,6 +138,8 @@
     </td>
   </tr>
 </table>
+<hr size="3">
+  <h3><a href="contactus.html">Contact us</a></h3>
 </body>
 
 </html>
