--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="C:\My Files\Web Development\Projects\HTML - Personal site\images\tanmay.png" width="200" height="200" alt="yes u dont see an image."></img></td>
+      <td><img src="images\tanmay.png" width="200" height="200" alt="yes u dont see an image."></img></td>
       <td>
         <h1>Tanmay kank</h1>
         <p>
