--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="https://drive.google.com/drive/u/1/folders/1DRXjLPYGoCh_7Xfo8e3yjKO1EQGsHNkz" width="200" height="200" alt="yes u dont see an image."></img></td>
+      <td><img src="images/tanmay.png" width="200" height="200" alt="yes u dont see an image."></img></td>
       <td>
         <h1>Tanmay kank</h1>
         <p>
